--- a/shop-detail.html
+++ b/shop-detail.html
@@ -143,7 +143,10 @@
                             </div>
                             <div class="purchase">
                                 <div class="input-group">
-                                    <label for="referral-code">推薦碼 <i class="icon-InfoCircle"></i></label>
+                                    <label for="referral-code">
+                                        推薦碼
+                                        <i class="icon-InfoCircle popUp--open" for="info"></i>
+                                    </label>
                                     <input name="referral-code" type="text" placeholder="Placeholder">
                                 </div>
                                 <div class="price">
@@ -264,9 +267,6 @@
             <ul class="sns">
                 <li>
                     <button class="btn-rounded"><i class="icon-Twitter"></i></button>
-                </li>
-                <li>
-                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
                 </li>
             </ul>
         </footer>
