--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="vendor/icomoon/style.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mainPage.css">
 
     <title>ZKaizoku 一站式互動平台</title>
 
@@ -60,7 +60,7 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div id="app">
+    <div id="mainPage">
         <header>
             <a class="main-logo" href="index.html"><img src="img/logo.svg"></a>
             <div class="options">
@@ -69,7 +69,7 @@
                     <ul>
                         <li onclick="location='shop.html'">商城</li>
                         <li>Game</li>
-                        <li onclick="location='index.html#nft'">NFT</li>
+                        <li onclick="location='index.html#nft-idx'">NFT</li>
                         <li onclick="location='index.html#tutorial'">教學</li>
                         <li onclick="location='index.html#zkz'">$ZKZ</li>
                         <li onclick="location='bridge.html'">Bridge</li>
@@ -101,9 +101,9 @@
             </div>
         </header>
 
-        <main>
+        <main class="innerPage">
             <ul class="breadcrumb">
-                <li>首頁</li>
+                <li onclick="location='index.html'">首頁</li>
                 <li>Game</li>
             </ul>
 
