--- a/shop-detail.html
+++ b/shop-detail.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="vendor/icomoon/style.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mainPage.css">
 
     <title>ZKaizoku 一站式互動平台</title>
 
@@ -60,7 +60,7 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div id="app">
+    <div id="mainPage">
         <header>
             <a class="main-logo" href="index.html"><img src="img/logo.svg"></a>
             <div class="options">
@@ -69,7 +69,7 @@
                     <ul>
                         <li>商城</li>
                         <li onclick="location='game.html'">Game</li>
-                        <li onclick="location='index.html#nft'">NFT</li>
+                        <li onclick="location='index.html#nft-idx'">NFT</li>
                         <li onclick="location='index.html#tutorial'">教學</li>
                         <li onclick="location='index.html#zkz'">$ZKZ</li>
                         <li onclick="location='bridge.html'">Bridge</li>
@@ -101,10 +101,11 @@
             </div>
         </header>
 
-        <main>
+        <main class="innerPage">
             <section id="shop">
                 <div class="container">
-                    <ul class="progress step1">
+                    <!-- 進度切換到每個步驟時，.progress 增加相對應 .step1~3 -->
+                    <ul class="progress step2">
                         <li>
                             <h5>1</h5>
                             <span>商品明細</span>
