--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="vendor/icomoon/style.css">
 
 	<!-- Custom Styles -->
+	<link rel="stylesheet" href="css/bodySetting.css">
 	<link rel="stylesheet" href="css/mainPage.css">
 
 	<title>ZKaizoku 一站式互動平台</title>
@@ -108,6 +109,7 @@
 									</ul>
 								</div>
 							</li>
+							<!-- <li for="twitter"><i class="icon-Twitter"></i> Twitter</li> -->
 						</ul>
 					</div>
 				</div>
@@ -557,7 +559,6 @@
 	<!-- Custom settings -->
 	<script src="js/navigation.js"></script>
 	<script src="js/index-nav.js"></script>
-	<script src="js/menu.js"></script>
 	<script src="js/dropdown.js"></script>
 	<script src="js/fulldown.js"></script>
 	<script src="js/tab.js"></script>
@@ -620,7 +621,7 @@
 		});
 
 		// NFT 輪播
-		var isComingSoon = $('#nft-idx .swiper').hasClass('coming-soon');
+		var isComingSoon = $('#nft-idx .swiper').hasClass('coming-soon')
 
 		var swiperNFT = new Swiper('#nft-idx .swiper', {
 			effect: "coverflow",
