--- a/shop.html
+++ b/shop.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="vendor/icomoon/style.css">
 
     <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/bodySetting.css">
     <link rel="stylesheet" href="css/mainPage.css">
 
     <title>ZKaizoku 一站式互動平台</title>
@@ -72,7 +73,31 @@
                         <li onclick="location='index.html#nft-idx'">NFT</li>
                         <li onclick="location='index.html#tutorial'">教學</li>
                         <li onclick="location='index.html#zkz'">$ZKZ</li>
-                        <li onclick="location='bridge.html'">Bridge</li>
+                        <li for="bridge" class="dropdown">
+                            <button>Bridge</button>
+                            <div class="dropdown-content">
+                                <ul>
+                                    <li>
+                                        <a href="https://cbridge.celer.network/1/56/USDC" target="_blank">Celer
+                                            Network</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://router.via.exchange/zksync%20era/ETH/polygon/MATIC"
+                                            target="_blank">Via exchange</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.orbiter.finance/?source=Ethereum&dest=Arbitrum"
+                                            target="_blank">Orbiter Finance</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://bridge.poly.network/" target="_blank">Poly Network</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <li for="language" class="language dropdown">
                             <button>繁體中文</button>
                             <div class="dropdown-content">
