更新 zcoin & og-img

--- a/personal.html
+++ b/personal.html
@@ -18,7 +18,7 @@
     <!-- share info -->
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://gashpo.github.io/zkaizokuimg/og-image.png" />
+    <meta property="og:image" content="https://gashpo.github.io/zkaizoku/img/og-image.png" />
     <link rel=”apple-touch-icon” href=”img/apple-touch-icon.png”>
 
     <!-- Fancybox 套件 -->
@@ -260,11 +260,21 @@
                             <button class="btn-tertiary btn-s">加入$ZKZ</button>
                             <div class="now">
                                 <h6>當前<br>積分幣數量</h6>
-                                <div class="value">230</div>
+                                <div class="value">
+                                    <span>
+                                        <img src="img/coin.png">
+                                        230
+                                    </span>
+                                </div>
                             </div>
                             <div class="accumulation">
                                 <h6>待領取<br>積分幣數量</h6>
-                                <div class="value">100</div>
+                                <div class="value">
+                                    <span>
+                                        <img src="img/coin.png">
+                                        100
+                                    </span>
+                                </div>
                                 <button class="popUp--open" for="withdraw">領取積分幣</button>
                             </div>
                         </div>
@@ -573,7 +583,7 @@
                 <button class="popUp--close"><i class="icon-Close"></i></button>
                 <h3>領取積分幣</h3>
                 <div class="popUp--content">
-                    <div class="img"><img src="img/withdraw.jpg"></div>
+                    <div class="img"><img src="img/coin.gif"></div>
                     <div class="content">
                         <div class="input-wrap">
                             <label for="price">欲提領的積分幣數量</label>
