--- a/shop-detail.html
+++ b/shop-detail.html
@@ -18,7 +18,7 @@
     <!-- share info -->
     <meta property="og:locale" content="en" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://gashpo.github.io/zkaizokuimg/og-image.png" />
+    <meta property="og:image" content="https://gashpo.github.io/zkaizoku/img/og-image.png" />
     <link rel=”apple-touch-icon” href=”img/apple-touch-icon.png”>
 
     <!-- Swiper 套件 -->
