提供一版個人資訊頁給RD

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 					<button class="menu"></button>
 					<div class="nav">
 						<ul>
-							<li for="shop">商城</li>
-							<li for="game">Game</li>
-							<li for="nft-idx">NFT</li>
-							<li for="tutorial">教學</li>
-							<li for="zkz">$ZKZ</li>
+							<li for="shop"><a href="javascript:void()">商城</a></li>
+							<li for="game"><a href="javascript:void()">Game</a></li>
+							<li for="nft-idx"><a href="javascript:void()">NFT</a></li>
+							<li for="tutorial"><a href="javascript:void()">教學</a></li>
+							<li for="zkz"><a href="javascript:void()">$ZKZ</a></li>
 							<li for="bridge" class="dropdown">
 								<button>Bridge</button>
 								<div class="dropdown-content">
@@ -103,13 +103,14 @@
 								<button>繁體中文</button>
 								<div class="dropdown-content">
 									<ul>
-										<li class="active">繁體中文</li>
-										<li>English</li>
-										<li>日本語</li>
+										<li class="active"><a href="javascript:void()">繁體中文</a></li>
+										<li><a href="javascript:void()">English</a></li>
+										<li><a href="javascript:void()">日本語</a></li>
 									</ul>
 								</div>
 							</li>
-							<!-- <li for="twitter"><i class="icon-Twitter"></i> Twitter</li> -->
+							<li for="twitter"><a href="https://twitter.com/ZKaizoku_" target="_blank"><i
+										class="icon-Twitter"></i> Twitter</a></li>
 						</ul>
 					</div>
 				</div>
@@ -120,8 +121,8 @@
 						<button>0x130...123DxA</button>
 						<div class="dropdown-content">
 							<ul>
-								<li onclick="location='personal.html'">個人資訊</li>
-								<li>登出</li>
+								<li onclick="location='personal.html'"><a href="javascript:void()">個人資訊</a></li>
+								<li><a href="javascript:void()">登出</a></li>
 							</ul>
 						</div>
 					</div>
