--- a/personal.html
+++ b/personal.html
@@ -71,11 +71,11 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li onclick="location='shop.html'">商城</li>
-                        <li onclick="location='game.html'">Game</li>
-                        <li onclick="location='index.html#nft-idx'">NFT</li>
-                        <li onclick="location='index.html#tutorial'">教學</li>
-                        <li onclick="location='index.html#zkz'">$ZKZ</li>
+                        <li onclick="location='shop.html'"><a href="javascript:void()">商城</a></li>
+                        <li onclick="location='game.html'"><a href="javascript:void()">Game</a></li>
+                        <li onclick="location='index.html#nft-idx'"><a href="javascript:void()">NFT</a></li>
+                        <li onclick="location='index.html#tutorial'"><a href="javascript:void()">教學</a></li>
+                        <li onclick="location='index.html#zkz'"><a href="javascript:void()">$ZKZ</a></li>
                         <li for="bridge" class="dropdown">
                             <button>Bridge</button>
                             <div class="dropdown-content">
@@ -105,14 +105,14 @@
                             <button>繁體中文</button>
                             <div class="dropdown-content">
                                 <ul>
-                                    <li class="active">繁體中文</li>
-                                    <li>English</li>
-                                    <li>日本語</li>
+                                    <li class="active"><a href="javascript:void()">繁體中文</a></li>
+                                    <li><a href="javascript:void()">English</a></li>
+                                    <li><a href="javascript:void()">日本語</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <!-- <li onclick="window.open('https://twitter.com/ZKaizoku_')">
-                            <i class="icon-Twitter"></i> Twitter
+                        <!-- <li>
+                            <a href="https://twitter.com/ZKaizoku_" target="_blank"><i class="icon-Twitter"></i> Twitter</a>
                         </li> -->
                     </ul>
                 </div>
@@ -124,8 +124,8 @@
                     <button>0x130...123DxA</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>個人資訊</li>
-                            <li>登出</li>
+                            <li><a href="javascript:void()">個人資訊</a></li>
+                            <li><a href="javascript:void()">登出</a></li>
                         </ul>
                     </div>
                 </div>
